--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -8,6 +8,14 @@
     <script src="../Script/script.js"></script>
 </head>
 <body>
+    <div class="header">
+        <ul>
+          <li><a href="../index.php">Home</a></li>
+          <li><a href="#">Over Mij</a></li>
+          <li><a class="active" href="Contact.html">Contact</a></li>
+          <li><a href="Comments.php">Comments</a></li>
+        </ul>
+
     <h2>Contact</h2>
     <form action="process.php" method="post">
         <label for="naam">Naam:</label>
