--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="../Style/style.css">
-    <script src="../Script/script.js"></script>
+    <script src="../Script/ContactJS.js"></script>
 </head>
 <body>
     <div class="header">
