--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="Style/comments.css">
     <script src="../Script/ContactJS.js"></script>
 </head>
 <body>
